name:                Aeromess
version:             0.1.0.0
synopsis:            Aeronautical Messages parsers and formatters
description:
  Aeromess provides parsers and formatters for a wide range of
  aeronautical messages, such as ICAO/AIDC/OLDI ATS messages, WMO and FAA
  METARs and TAFs, ICAO NOTAMs

homepage:            https://github.com/ofmooseandmen/Aeromess#readme
license:             BSD3
license-file:        LICENSE
author:              Cedric Liegeois
maintainer:          ofmooseandmen@yahoo.com
Copyright:           Copyright (c) 2017-2017 Cedric Liegeois
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Icao.AtsMessage
                     , Data.Icao.Lang
                     , Data.Icao.Location
                     , Data.Icao.OtherInformation
                     , Data.Icao.SupplementaryInformation
                     , Data.Icao.Time
                     , Data.Wmo.Metar
  other-modules:       Data.Aeromess.Parser
                     , Data.Icao.F3
                     , Data.Icao.F7
                     , Data.Icao.F8
                     , Data.Icao.F9
                     , Data.Icao.F10
                     , Data.Icao.F13
                     , Data.Icao.F16
                     , Data.Icao.F17
                     , Data.Icao.F18
                     , Data.Icao.F19
                     , Data.Icao.Switches
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11 && < 4
  default-language:    Haskell2010

test-suite Aeromess-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -Wall
  other-modules:       Data.Icao.ArrivalMessageSpec
                     , Data.Icao.DepartureMessageSpec
                     , Data.Icao.Expected
                     , Data.Icao.LocationSpec
                     , Data.Icao.OtherInformationSpec
                     , Data.Icao.TimeSpec
                     , Data.Wmo.MetarSpec
                     , Data.Wmo.MetarWmoSpec
                     , Data.Wmo.MetarFaaSpec
  main-is:             Spec.hs
  build-depends:       base
                     , Aeromess
                     , hspec == 2.*
                     , parsec >= 3.1.11 && < 4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ofmooseandmen/Aeromess
