name:                Icao
version:             0.1.0.0
synopsis:            ICAO 4444 Parser
description:
  ICAO 4444 (edition 2016) parser

homepage:            https://github.com/githubuser/Icao#readme
license:             BSD3
license-file:        LICENSE
author:              Cedric Liegeois
maintainer:          ofmooseandmen@yahoo.com
copyright:           2017 Cedric Liegeois
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Icao.AtsMessage
                     , Data.Icao.F3
                     , Data.Icao.F7
                     , Data.Icao.F13
                     , Data.Icao.F16
                     , Data.Icao.F17
                     , Data.Icao.F18
                     , Data.Icao.Time
                     , Data.Icao.Util
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1.11 && < 4
  default-language:    Haskell2010

test-suite Icao-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Icao
                     , hspec == 2.*
                     , parsec >= 3.1.11 && < 4
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Icao
